# kauth-dashboard

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/api/: Api.cpp  Api.h
src/api/models/: Application.cpp  Application.h  ApplicationFile.cpp  ApplicationFile.h  ApplicationUser.cpp  ApplicationUser.h  ApplicationWebhook.cpp  ApplicationWebhook.h
src/cli/: Command.cpp  Command.h  Menu.cpp  Menu.h
